# simplecast

./: .gitignore  .proxyrc.js  Dockerfile  Dockerfile-dev  LICENSE  README.md  devspace.yaml  devspace_start.sh  index.css  index.css.map  index.js  index.js.map  mosmix.json  package-lock.json  package.json  pyproject.toml  radar.py  simplecast.py  tailwind.config.js  test.html
static/: site.webmanifest
templates/: index.css  index.html  index.html.jinja  macros.jinja
