[tool.poetry]
name = "simplecast"
version = "0.1.0"
description = ""
authors = ["Niclas Hoyer <info@niclashoyer.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Jinja2 = "^3.1.2"
wetterdienst = { git = "https://github.com/niclashoyer/wetterdienst.git", branch = "mosmix_iterparse" }
plac = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
