[tool.poetry]
name = "simplecast"
version = "0.1.0"
description = ""
authors = ["Niclas Hoyer <info@niclashoyer.de>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
Jinja2 = "^3.1.2"
wetterdienst = "^0.69.0"
plac = "^1.3.5"
matplotlib = "^3.8.2"
xarray = "^2023.12.0"
wradlib = "^2.0.3"
webp = "^0.3.0"
rioxarray = "^0.15.0"
pyproj = "^3.6.1"
gdal = "3.6.2"
python-ffmpeg = "^2.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
